--- a/platforms/documentation/docs/src/docs/userguide/developing-plugins/tutorial/part1_gradle_init_plugin.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/developing-plugins/tutorial/part1_gradle_init_plugin.adoc
@@ -12,6 +12,249 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-= Writing a Custom Gradle Plugin: FileDiff
+[[part1_gradle_init]]
+= Part 1: Initializing the Project
+
+Learn the basics of developing Gradle plugins started with Gradle init.
+
+****
+**In this section, you will:**
+
+- Initialize a Gradle plugin project
+- Review the directory layout
+- Learn about what we will transform this plugin into
+****
 
 [[part1_begin]]
+== Step 0. Before you Begin
+
+1. Make sure you have <<installation.adoc#installation,Gradle installed>>.
+
+2. Install link:https://www.jetbrains.com/idea/download/[IntelliJ IDEA].
+The Community Edition is a free version of IntelliJ IDEA.
+
+== Step 1. Initializing the Project
+
+Create a new directory called `plugin-tutorial` and `cd` into it:
+
+[source,text]
+----
+$ mkdir plugin-tutorial
+----
+[source,text]
+----
+$ cd plugin-tutorial
+----
+
+Run `gradle init` with parameters to generate a plugin:
+
+[.multi-language-sample]
+=====
+[source, kotlin]
+----
+$ gradle init --type kotlin-gradle-plugin  --dsl kotlin
+----
+=====
+[.multi-language-sample]
+=====
+[source, groovy]
+----
+$ gradle init --type groovy-gradle-plugin  --dsl groovy
+----
+=====
+
+Select defaults for any additional prompts.
+
+NOTE: In this tutorial, all examples are macOS based.
+
+== Step 2. Understanding the Directory layout
+
+The *project root directory* contains all source files from your project.
+
+When you are done with Gradle `init`, the directory should look as follows:
+
+[.multi-language-sample]
+=====
+[source, kotlin]
+----
+.
+├── gradle                  // <1>
+│   ├── libs.versions.toml  // <2>
+│   └── wrapper
+├── gradlew         // <3>
+├── gradlew.bat     // <3>
+├── settings.gradle.kts     // <4>
+└── plugin
+    ├── build.gradle.kts    // <5>
+    └── src
+        ├── main
+        │   └── kotlin                    // <6>
+        │       └── org/example
+        │           └── DevelopingPluginPlugin.kt
+        ├── test
+        │   └── kotlin                    // <7>
+        │       └── org/example
+        │           └── DevelopingPluginPluginTest.kt
+        └── functionalTest
+            └── kotlin                    // <8>
+                └── org/example
+                    └── DevelopingPluginPluginFunctionalTest.kt
+----
+<1> Generated folder for wrapper files
+<2> Version catalog for dependencies
+<3> Gradle wrapper start scripts
+<4> Settings file to define build name and subprojects
+<5> Build script for `plugin` subproject
+<6> Default source folder for the plugin
+<7> Default test source folder for the plugin
+<8> Default functional test source folder for the plugin
+=====
+[.multi-language-sample]
+=====
+[source, groovy]
+----
+.
+├── gradle                  // <1>
+│   ├── libs.versions.toml  // <2>
+│   └── wrapper
+├── gradlew         // <3>
+├── gradlew.bat     // <3>
+├── settings.gradle     // <4>
+└── plugin
+    ├── build.gradle    // <5>
+    └── src
+        ├── main
+        │   └── groovy                    // <6>
+        │       └── org/example
+        │           └── DevelopingPluginPlugin.groovy
+        ├── test
+        │   └── groovy                    // <7>
+        │       └── org/example
+        │           └── DevelopingPluginPluginTest.groovy
+        └── functionalTest
+            └── groovy                    // <8>
+                └── org/example
+                    └── DevelopingPluginPluginFunctionalTest.groovy
+----
+<1> Generated folder for wrapper files
+<2> Version catalog for dependencies
+<3> Gradle wrapper start scripts
+<4> Settings file to define build name and subprojects
+<5> Build script for `plugin` subproject
+<6> Default source folder for the plugin
+<7> Default test source folder for the plugin
+<8> Default functional test source folder for the plugin
+=====
+
+The `authoring-tutorial` folder is the *root project directory*.
+Inside the root project directory, there is a `plugin` subproject.
+
+== Step 3. Review the Gradle Build File
+
+The most interesting thing to note is in the `build.gradle(.kts)`.
+When you're writing a binary Gradle plugin, meaning a plugin implemented in Java, Kotlin, or Groovy, and you want Gradle to:
+
+1. Automatically generate plugin metadata
+2. Add plugin development conventions
+3. Simplify publishing
+
+You should apply the `java-gradle-plugin` plugin and configure it using the `gradlePlugin {}` block:
+
+[source,kotlin]
+----
+plugins {
+    // Apply the Java Gradle plugin development plugin to add support for developing Gradle plugins
+    `java-gradle-plugin`
+}
+
+gradlePlugin {
+    // Register a new plugin with Gradle's plugin mechanism
+    val greeting by plugins.creating {
+        // The ID that users will use to apply the plugin in their build script
+        id = "org.example.greeting"
+        // The fully-qualified name of the class that implements the Plugin<Project> interface
+        implementationClass = "org.example.DevelopingPluginPlugin"
+    }
+}
+----
+
+* `gradlePlugin {}`: This tells Gradle that you're authoring a plugin and want to configure its metadata.
+* `val greeting by plugins.creating { ... }`: This registers a new plugin definition with the name `greeting`.
+* `id = "org.example.greeting"`: This is the plugin ID that users will apply in their build scripts.
+* `implementationClass = "org.example.DevelopingPluginPlugin"`: This points to the class that implements the plugin's logic by extending `Plugin<Project>`.
+
+== Step 4. Review the Plugin Code
+
+In `plugin/src/main/kotlin/org/example/DevelopingPluginPlugin.kt` you will find a rudimentary plugin generated by Gradle init:
+
+[source,kotlin]
+----
+/**
+ * A simple 'hello world' plugin.
+ * This class implements Gradle's Plugin interface and applies behavior to a project.
+ */
+class DevelopingPluginPlugin : Plugin<Project> {
+    /**
+     * This method is called when the plugin is applied to a project.
+     * It registers a new task named "greeting" on the project.
+     */
+    override fun apply(project: Project) {
+        // Register a new task named "greeting" in the current project
+        project.tasks.register("greeting") { task ->
+            // Configure the task to print a message when it runs
+            task.doLast {
+                println("Hello from plugin 'org.example.greeting'")
+            }
+        }
+    }
+}
+----
+
+* `Plugin<Project>`: This tells Gradle that the plugin works with `Project` objects.
+* `apply(...)`: Gradle calls this when the plugin is applied to a project.
+* `tasks.register("greeting")`: Registers a new task that users can run with `./gradlew greeting`.
+* `doLast { ... }`: Defines the action that happens when the task executes.
+
+
+== Step 5. Understand the Plugin
+
+This plugin is a simple “Hello, World!” Gradle plugin.
+
+It defines a single task named `greeting`.
+
+When you apply the plugin (with ID `org.example.greeting`):
+
+[source,kotlin]
+----
+plugins {
+    id("org.example.greeting")
+}
+----
+
+It registers a task like this:
+
+[source,text]
+----
+./gradlew greeting
+----
+
+When the `greeting` task runs, it prints the following message to the console:
+
+[source,text]
+----
+Hello from plugin 'org.example.greeting'
+----
+
+== Step 6: What we will Build
+
+With the remainder of this tutorial, you will build the *Slack Notification Gradle Plugin*.
+A lightweight Gradle plugin that posts your build results to Slack.
+
+The plugin can:
+
+- Post a custom Slack message using a simple task (`sendTestSlackMessage`)
+- Automatically report build success or failure at the end of the build
+- Seamlessly integrate with Gradle’s lifecycle via a `BuildService`, or a `BuildListener`, or the modern `FlowAction` API
+
+[.text-right]
+**Next Step:** <<part2_add_extension.adoc#part2_add_extension,Add an Extension>> >>
